Bug 1781830: Prevent PiP windows from opening in fullscreen. r=mac-reviewers,mstange

Though this is standard behavior for other windows, we want to
special-case this for PiP windows, which users expect to open in
resizable popups. This patch also prevents other popups and
alerts/dialogs from opening in fullscreen mode, which would be a bad
user experience.

Differential Revision: https://phabricator.services.mozilla.com/D210382